# anchor-idl-bug

./: Anchor.toml  README.md
programs/idl-repro/: Cargo.toml
programs/idl-repro/src/: lib.rs
